--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     volumes:
       - postgres_data:/pgdata:ro
       - media:/media:ro
-      - ./backups:/backup
+      - ./backups:/backup/output
     env_file:
       - .env
     networks:
