Substituicao do script de backup

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="123postgres456"
 POSTGRES_HOST="postgres-db"
 POSTGRES_PORT="5432"
+
+HEALTHCHECK_PORT="8069"
