--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,22 +19,6 @@ services:
       timeout: 10s
       retries: 3
 
-  postgres-db:
-    container_name: ${POSTGRES_HOST}
-    image: postgres:17.5
-    restart: unless-stopped
-    env_file:
-      - .env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - nginx-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
   django-app:
     container_name: django-app
     build: .
@@ -60,20 +44,46 @@ services:
         gunicorn --config gunicorn_config.py app.wsgi:application
       "
 
-  backup:
-    build: ./backup
-    container_name: backup-service
-    volumes:
-      - postgres_data:/pgdata:ro
-      - media:/media:ro
-      - ./backups:/backup/output
+  postgres-db:
+    container_name: ${POSTGRES_HOST}
+    image: postgres:17.5
+    restart: unless-stopped
     env_file:
       - .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - nginx-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  postgres-backup:
+    image: prodrigestivill/postgres-backup-local:latest
+    container_name: postgres-backup
     depends_on:
       - postgres-db
-    restart: unless-stopped
+    environment:
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      TZ: America/Sao_Paulo
+      SCHEDULE: "@daily"
+      BACKUP_KEEP_DAYS: 7
+      BACKUP_KEEP_WEEKS: 4
+      BACKUP_KEEP_MONTHS: 4
+      HEALTHCHECK_PORT: ${HEALTHCHECK_PORT}
+    volumes:
+      - backup:/backups
+    restart: always
+    ports:
+      - "${HEALTHCHECK_PORT}:${HEALTHCHECK_PORT}"  # Expor porta HEALTHCHECK_PORT
+    networks:
+      - nginx-network
 
 networks:
   nginx-network:
